@@ -28,6 +28,7 @@ require("__rubia__.compat.pickier-dollies")
 require("__rubia__.compat.discovery-tree")
 require("__rubia__.compat.factorissimo")
 require("__rubia__.compat.surface-condition-rechecks")
+require("__rubia__.compat.cargo-bay-inserters")
 
 --Start of rubia
 event_lib.on_event(defines.events.on_surface_created, "rubia-created", function(event)
